--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "keycloak-angular": "^9.1.0",
     "keycloak-js": "^16.1.1",
     "merge-jsons-webpack-plugin": "^2.0.1",
-    "ng-zorro-antd": "^13.0.1",
+    "ng-zorro-antd": "^13.3.2",
+    "ngx-smooth-dnd": "^0.4.1",
     "ngx-webstorage": "^9.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^13.1.0",
+    "@angular-builders/jest": "13.0.3",
     "@angular-devkit/build-angular": "~13.1.4",
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.0",
@@ -44,7 +46,12 @@
     "@types/node": "^12.11.1",
     "dayjs": "^1.10.8",
     "jasmine-core": "~3.10.0",
+    "@types/jest": "27.4.1",
     "jest": "^27.5.1",
+    "jest-date-mock": "1.0.8",
+    "jest-junit": "13.0.0",
+    "jest-preset-angular": "11.1.1",
+    "jest-sonar-reporter": "2.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
